2002-06-28  Jordi Mallach  <jordi@sindominio.net>

	* src/gtetrinet.c, partyline.c, partyline.h, tetrinet.c:
	patch from Bastien Nocera which fixes focusing of the text entry
	when switching to the partyline page.

2002-06-28  Jordi Mallach  <jordi@sindominio.net>

	* autogen.sh: added.

	* gtetrinet.desktop: added Catalan translations.

	* configure.in: added src/images/Makefile to AC_OUTPUT.
	* src/Makefile.am: added images to SUBDIRS.
	* src/images/Makefile.am: added, EXTRA_DIST the images.

2002-06-28  Jordi Mallach  <jordi@sindominio.net>

	* Added internationalization support.

	* Makefile,am: added missing stuff to EXTRA_DIST.
	Added po to SUBDIRS.
	* configure.in: call AM_GNU_GETTEXT, added ALL_LINGUAS.

	* src/Makefile: define $localedir and add it to the compile
	includes.
	* src/gtetrinet.c: setup gettext init.
	* src/commands.c, src/gtetrinet.c, src/tetrinet.c, src/winlist.c,
	src/winlist.c: marked missing strings for translation.

	* po/ca.po: new Catalan translation.

2002-06-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.in (AC_OUTPUT): Add po/Makefile.in, m4/Makefile.

2002-01-14  Jordi Mallach  <jordi@sindominio.net>
	* Fixed cosmetic issue in about dialog.
	* Fixed major problem in ARM, PowerPC and S/390 architectures,
	  char variables aren't signed by default in those systems.

2001-11-05
	* Cleaned up page detach patch.
	* Merged TetriFast support.
	  (tested compatible with Pihvi's Java Tetrinet Server)
	* Added some fixes by Pihvi.
	* Miscellaneous bug fixes.
	* Game messages are no longer cleared when a game ends.
	* Player listing in the partyline is now numbered.

2001-01-13
	* Merged page detach patch from Neil Bird <neil.bird@rdel.co.uk>.
	* Fixed stupid bug in tetrinet_specialkey().

2000-07-03 - version 0.4.1

2000-06-27
	* Pause/resume now causes a message to be displayed on fields page.

2000-06-26